# monorepo

./: .env  .gitignore  .gitmodules  .pre-commit-config.yaml  404.org  GEMINI.md  LICENSE.org  QWEN.md  README.org  about.org  agenda.org  books.org  flake.nix  index.org  names.org  public-key.asc  resume.org  resume.tex  robots.txt  site.webmanifest  style.css  style.scss  syntax.css  vencord-settings-backup.json
nix/: .sops.yaml  add-system.sh  fake-update-dns.sh  flake.nix  flakevars.nix  init.el  pyproject.toml  update-dns.sh
nix/data/: deploy-matterbridge.sh  matterbridge.toml  motd.txt  public-inbox.css
nix/disko/: btrfs-simple.nix  drive-bios.nix  drive-simple.nix  nvme-simple.nix  sda-simple.nix  vda-simple.nix
nix/dns/: default.nix
nix/modules/: bitcoin.nix  cgit.nix  conduit.nix  configuration.nix  coturn.nix  cuda.nix  default.nix  docker.nix  dovecot.nix  fail2ban.nix  firejail.nix  git-daemon.nix  gitolite.nix  gitweb.nix  gotosocial.nix  heisenbridge.nix  honk.nix  i2pd.nix  icecast.nix  impermanence.nix  inspircd.nix  ircd.nix  kubo.nix  maddy.nix  matrix-appservice-irc.nix  matterbridge.nix  mautrix.nix  murmur.nix  nginx.nix  ngircd.nix  ntfy-sh.nix  nvidia.nix  ollama.nix  pantalaimon.nix  pipewire.nix  postfix.nix  public_inbox.nix  sda-simple.nix  secrets.nix  secure-boot.nix  (+6 more)
nix/modules/home/: default.nix  emacs.nix  fcitx.nix  firefox.nix  gammastep.nix  git.nix  gtk.nix  home.nix  hyprland.nix  (+15 more)
nix/secrets/: secrets.yaml  vps_secrets.yaml
nix/systems/: common.nix  home-common.nix  home.nix  includes.nix
nix/topology/: default.nix
(+271 files in other folders)
